# leptos-fetch-demo

./: Cargo.toml  README.md  Trunk.toml  index.html
.github/workflows/: gh_page.yml  rust.yml
src/: api.rs  components.rs  lib.rs  main.rs  resource.rs
src/components/: fetch_by_leptos_fetch.rs  fetch_by_local_resource.rs
src/resource/: wrapper_local_resource.rs
