[package]
name = "leptos-fetch-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
leptos = { version = "0.8.6", features = [ "csr" ] }
leptos-fetch = "0.4.4"
serde = { version = "1.0", features = [ "derive" ] }

[features]
default = []
development = [
    "dep:console_error_panic_hook",
    "leptos-fetch/devtools"
]
